# WinK760

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.cmd
cmake/: toolchain-cross-mingw32-linux.cmake
lib/: CMakeLists.txt
res/: CMakeLists.txt  WinK760.rc  resource.h  resources.qrc
res/qml/window/: main.qml
src/: CMakeLists.txt  WinK760.cpp  bluetooth.cpp  bluetooth.h  ejectkey.cpp  ejectkey.h  hid.cpp  hid.h  hidapi.h  main.cpp  mingw-unicode-gui.h  notifyicon.cpp  notifyicon.h  stdafx.h  window.cpp  window.h  worker.cpp  worker.h
src/hid/: hid.cpp  hid.h
src/hidapi/: hidapi.c
src/qt/: ApplicationContext.cpp  ApplicationContext.h  KeyboardEventFilter.cpp  KeyboardEventFilter.h
